# aiscaler

./: .clang-format  .gitignore  AIScaler.ifp  AIScaler.py  CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt  resource.qrc  tmp.json
python/: AIScaler.ifp  AIScaler.py  Makefile
src/: appicon.rc  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  worker.cpp  worker.h
src/ui/: image.ui  mainwindow.ui  ui_image.h  ui_mainwindow.h
ui/: resource.py  ui_image.py  ui_image.ui  ui_main.py  ui_main.ui  ui_mainwindow.py  ui_mainwindow.ui
